5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4007/executions/1712_2504.log
== TEST (2019-05-13 13:39:07) 
-- CODE:
qic = int(input("copias de virus: "))
qil = int(input("leucocitos iniciais: "))
pmv =int(input("percentual de multiplicacao(dia): "))
pml = int(input("percentual(leucocitos): "))

dias = 0
pmv = pmv / 100
pml = ḿl / 100
while (qic == 2*qil):
	qil = qil * pml - qil
	qic = qic * pmv - qic
	dias = dias + 1
print(dias)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    pml = ḿl / 100
NameError: name 'ḿl' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 13:39:35) 
-- CODE:
qic = int(input("copias de virus: "))
qil = int(input("leucocitos iniciais: "))
pmv =int(input("percentual de multiplicacao(dia): "))
pml = int(input("percentual(leucocitos): "))

dias = 0
pmv = pmv / 100
pml = pml / 100
while (qic == 2*qil):
	qil = qil * pml - qil
	qic = qic * pmv - qic
	dias = dias + 1
print(dias)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    pml = ḿl / 100
NameError: name 'ḿl' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 13:40:58) 
-- CODE:
qic = int(input("copias de virus: "))
qil = int(input("leucocitos iniciais: "))
pmv =int(input("percentual de multiplicacao(dia): "))
pml = int(input("percentual(leucocitos): "))

dias = 0
pmv = pmv / 100
pml = pml / 100
while (qic /qil) <= 2:
	qil = qil * pml + qil
	qic = qic * pmv + qic
	dias = dias + 1
print(dias)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    pml = ḿl / 100
NameError: name 'ḿl' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 13:41:33) 
-- CODE:
qic = int(input("copias de virus: "))
qil = int(input("leucocitos iniciais: "))
pmv =int(input("percentual de multiplicacao(dia): "))
pml = int(input("percentual(leucocitos): "))

dias = 0
pmv = pmv / 100
pml = pml / 100
while (qil /qic) <= 2:
	qil = qil * pml + qil
	qic = qic * pmv + qic
	dias = dias + 1
print(dias)
-- OUTPUT:
9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 13:41:48) 
-- CODE:
qic = int(input("copias de virus: "))
qil = int(input("leucocitos iniciais: "))
pmv =int(input("percentual de multiplicacao(dia): "))
pml = int(input("percentual(leucocitos): "))

dias = 0
pmv = pmv / 100
pml = pml / 100
while (qil /qic) <= 2:
	qil = qil * pml + qil
	qic = qic * pmv + qic
	dias = dias + 1
print(dias)
-- EXECUTION TIME:
0.156155
-- TEST CASE 1:
---- input:
350625
5500
2
75
---- correct output:
9
---- user output:
9
-- TEST CASE 2:
---- input:
650090
90045
4
90
---- correct output:
5
---- user output:
5
-- TEST CASE 3:
---- input:
419250
1725
9
59
---- correct output:
17
---- user output:
17
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 14:20:00) 
-- CODE:
qic = int(input("copias de virus: "))
qil = int(input("leucocitos iniciais: "))
pmv =int(input("percentual de multiplicacao(dia): "))
pml = int(input("percentual(leucocitos): "))

dias = 0
pmv = pmv / 100
pml = pml / 100
while (qil /qic) <= 2:
	qil = qil * pml + qil
	qic = qic * pmv + qic
	dias = dias + 1
print(dias)
-- OUTPUT:
9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
